--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <!-- Full Page Image Header Area -->
     <div id="top" class="header">
       <div class="vert-text">
-        <h1>Start Bootstrap</h1>
-        #<h3><em>Social Scientist</em> Build Great Templates, <em>You</em> Make Them Better</h3>
+        <h1>Timo Schnepf</h1>
+        #<h3><em>Social Scientist</em></h3>
         <a href="#about" class="btn btn-default btn-lg">Find Out More</a>
       </div>
     </div>
